--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@uiw/react-codemirror": "^4.23.5",
     "axios": "^1.7.7",
     "codemirror": "^6.0.1",
+    "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
