--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@uiw/react-codemirror": "^4.23.5",
     "axios": "^1.7.7",
     "codemirror": "^6.0.1",
+    "locutus": "^2.0.32",
     "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
