--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-react": "^9.4.0",
     "@monaco-editor/react": "^4.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +12,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@uiw/react-codemirror": "^4.23.5",
     "axios": "^1.7.7",
+    "ckeditor5": "^43.3.1",
     "codemirror": "^6.0.1",
     "locutus": "^2.0.32",
     "markdown-it": "^14.1.0",
