--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@ckeditor/ckeditor5-alignment": "^43.3.1",
     "@ckeditor/ckeditor5-build-classic": "^43.3.1",
     "@ckeditor/ckeditor5-react": "^9.4.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/material": "^6.1.9",
+    "@mui/x-charts": "^7.23.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
