--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "codemirror": "^6.0.1",
     "locutus": "^2.0.32",
     "markdown-it": "^14.1.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -30,12 +31,12 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-app-rewired start",
+  "build": "react-app-rewired build",
+  "test": "react-app-rewired test"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -54,5 +55,9 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/wp-content/themes/webstarter/js"
+  "homepage": "/wp-content/themes/webstarter/js",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-app-rewired": "^2.2.1"
+  }
 }
