--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
